@@ -1,3 +1,11 @@
+2020-02-28  Robby Stephenson  <robby@periapsis.org>
+
+	* Updated data source endpoint for TheGamesDB.net.
+
+2020-02-26  Robby Stephenson  <robby@periapsis.org>
+
+	* Fixed bug with writing invalid XML names (Bug 418067).
+
 2019-11-25  Robby Stephenson  <robby@periapsis.org>
 
 	* Fixed performance regression when loading data file.
